# signal-mentci

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs
schema/: lib.schema
src/: lib.rs
src/schema/: lib.rs
tests/: interface_readers.rs  round_trip.rs
