[package]
name         = "signal-mentci"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal-mentci"
description  = "Signal contract for Mentci programmable UI state and approval flow."
publish      = false
links        = "signal-mentci"
build        = "build.rs"

[lib]
name = "signal_mentci"
path = "src/lib.rs"

[[test]]
name = "round_trip"
path = "tests/round_trip.rs"
required-features = ["nota-text"]

[features]
default = []
nota-text = ["dep:nota-next", "signal-criome/nota-text", "signal-frame/nota-text"]

[dependencies]
nota-next    = { package = "nota", git = "https://github.com/LiGoldragon/nota-next.git", branch = "main", optional = true }
rkyv         = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-criome = { git = "https://github.com/LiGoldragon/signal-criome.git", branch = "main" }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", default-features = false }
thiserror    = "2"

[build-dependencies]
schema-rust-next = { package = "schema-rust", git = "https://github.com/LiGoldragon/schema-rust-next.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
